update [ add endpoint for update, delete]
